--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="secondMenuTitle">List</string>
     <string name="thirdMenuTitle">In Development</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_item">Enter item</string>
+    <string name="add">add</string>
 </resources>
